edit configuration project

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
         "node-sass": "^5.0.0",
         "postcss": "^8.2.1",
         "postcss-pxtorem": "^5.1.1"
+    },
+    "dependencies": {
+        "jquery": "^3.5.1"
     }
 }
