--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "gulp-sourcemaps": "^3.0.0",
         "gulp-svg-sprite": "^1.5.0",
         "gulp-uglify": "^3.0.2",
+        "mixitup": "^3.3.1",
         "mqpacker": "^7.0.0",
         "node-sass": "^5.0.0",
         "postcss": "^8.2.1",
