add section trends

--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
         "mqpacker": "^7.0.0",
         "node-sass": "^5.0.0",
         "postcss": "^8.2.1",
-        "postcss-pxtorem": "^5.1.1"
+        "postcss-pxtorem": "^5.1.1",
+        "rateyo": "^2.3.5"
     },
     "dependencies": {
-        "jquery": "^3.5.1"
+        "jquery": "^3.5.1",
+        "slick-carousel": "^1.8.1"
     }
 }
